--- a/public/training_vault_page.html
+++ b/public/training_vault_page.html
@@ -9,9 +9,9 @@
   <h1>Lex Training Vault</h1>
   <p>This page contains private training files for Lex.</p>
   <ul>
-    <!-- Lex Note: 67553p8k68.pdf = English Grammar Reference -->
+    <!-- Lex Note: Design Training – Photoshop CS5.1 Workflow Cheat Sheet -->
     <li>
-      <a href="/67553p8k68.pdf" title="Lex: English Grammar">PDF 1 – Language Doc</a>
+      <a href="/67553p8k68.pdf" title="Lex: Photoshop Workflow">PDF 1 – Photoshop CS5.1 Cheat Sheet</a>
     </li>
   </ul>
 </body>
